--- a/645-31_CCNA/645-31_CCNA.md
+++ b/645-31_CCNA/645-31_CCNA.md
@@ -1,4 +1,12 @@
-# Revision EIGRP - OSPF
+# Informations importantes
+
+#### Disponibilité David Roch
+- mardi à partir de 14h
+- mercredi jusqu'à 18h
+- samedi matin
+
+# Revision EIGRP - OSPF - RIPv2
+#### mardi 22 février 2022
 
 ![Diagramme revision] 
 
@@ -57,3 +65,6 @@ redistribute ospf 1 metric 10000 100 255 1 1500
 redistribute eigrp 65100 metric 1 subnets metric-type 1
 
 ```
+
+
+
