Table des matières

--- a/645-31_CCNA/645-31_CCNA.md
+++ b/645-31_CCNA/645-31_CCNA.md
@@ -5,6 +5,10 @@
 - mercredi jusqu'à 18h
 - samedi matin
 
+# Table de matières
+1. [Revision EIGRP - OSPF - RIPv2](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/645-31_CCNA.md#revision-eigrp---ospf---ripv2)
+2. 
+
 # Revision EIGRP - OSPF - RIPv2
 #### mardi 22 février 2022
 
@@ -65,6 +69,8 @@ redistribute ospf 1 metric 10000 100 255 1 1500
 redistribute eigrp 65100 metric 1 subnets metric-type 1
 
 ```
+
+# 
 
 
 
