Cours Tunnel gre et IPsec

--- a/645-31_CCNA/645-31_CCNA.md
+++ b/645-31_CCNA/645-31_CCNA.md
@@ -6,20 +6,21 @@
 - samedi matin
 
 # Table de matières
-1. [Revision EIGRP - OSPF - RIPv2](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/645-31_CCNA.md#revision-eigrp---ospf---ripv2)
-2. 
+1. [Révision EIGRP - OSPF - RIPv2](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/645-31_CCNA.md#revision-eigrp---ospf---ripv2)
+2. [Tunnel GRE]
+3. [Tunnel IPSec]
 
 # Revision EIGRP - OSPF - RIPv2
 #### mardi 22 février 2022
 
 ![Diagramme revision] 
 
-## Router
+#### Router
 - Choisir l'interface à configurer
 - Mettre l'adresse IP correspondante
 - Activer l'interface
 
-### Interface 
+#### Interface 
 ```
 int g0/0
 description vers R2
@@ -28,7 +29,7 @@ no shutdown
 
 ```
 
-### EIGRP
+#### EIGRP
 - Activer l'EIGRP soit 65100 ou 65200
 - Ajouter les réseaux qui sont directement connectés au routeur
 - Propager la table de routage à un autre protocole de routage
@@ -41,7 +42,7 @@ redistribute ospf 1 metric 10000 100 255 1 1500
 redistribute rip metric 1 subnets metric-type 1
 ```
 
-### OSPF
+#### OSPF
 - Activer OSPF avec un nombre unique
 - Ajouter un router ID le plus bas au routeur le plus proche de RC
 - Ajouter les réseaux qui sont directement connectés au routeur avec l'area
@@ -58,7 +59,7 @@ redistribute rip metric 1 subnets metric-type 1
 
 ```
 
-### RIPv2
+#### RIPv2
 ```
 router rip
 network 192.168.1.0 0.0.0.63
@@ -70,7 +71,340 @@ redistribute eigrp 65100 metric 1 subnets metric-type 1
 
 ```
 
-# 
+# Tunnel GRE
+
+#### Notions de VPN (Virtual Private Network) - Tunnel
+- Connexion privée de bout en bout sur un réseau tiers (Internet)
+- Communication strictement contrôlée
+
+2 types de VPN : Accès distant et site à site
+
+#### Configuration possibles
+
+![Configuration possibles]
+
+#### Avantages
+- Etendre la connectivité géographique
+- Réduire les coûts
+- Améliorer la productivité
+- Simplifier la topologie du réseau
+- Fournir du Networking global
+- Sécuriser les communications
+
+#### Fonctions
+- **Authentification** : on s'assure que la transmission est avec le bon interlocuteur.
+- **Contrôle d'accès** : liés aux accès internet et intranet.
+- **Confidentialité** : le VPN s'appuie sur un réseau non sûr, on chiffre les données émises. (Ipsec, PPTP/MPPE, L2TP)
+- **Intégrité** : les données émises sont identiques aux données reçues.
+- **Anti-replay** : Empêche de réutiliser un paquet intercepté
+- **Non repudiation** : Vérifie que la source et le destinataire sont bien lesbonnes parties correspondantes
+
+#### Solutions
+- **VPN de niveau 2**
+  - PPTP (Point to point Protocol de Microsoft),
+  - L2F (Layer 2 Forwarding de Cisco),
+  - L2TP (Layer 2 Tunneling Protocol fusion de PPTP et L2F)
+  - Routage sur les routeurs de l'entreprise
+  - Peut être mixé avec du VPN de niveau 3
+- **VPN de niveau 3**
+  - IPSec (IP Secure) intégré dans IPv6 (ne s'adresse qu'au monde IP)
+  - MPLS (Multi Protocol Label Switching)
+- **VPN SSL/TLS** action sur la couche 4
+- **VPN Applicatif** action sur la couche 7 (par exemple SSH)
+
+#### Exigences
+
+![exigences]
+
+- Le tunneling nécessite trois protocoles différents:
+  - **Protocole passager** : Les données d'origine (IPX, NetBeui, IP) qui sont transportées.
+  - **Protocole d'encapsulation** : Le protocole (GRE, IPsec, L2F, PPTP, L2TP) qui conditionne les données originales.
+  - **Protocole de transporteur** : Protocole sur lequel circulent les informations (Frame Relay, mode ATM, MPLS).
+
+#### Protocole GRE (Generic Routing Encapsulation)
+Protocole destiné à encapsuler un protocole dans un autre.
+
+![protocole GRE]
+
+- Dans l'en-tête IP externe, la valeur 47 est utilisée dans le champ de protocole afin d'indiquer qu'un en-tête GRE va suivre.
+- L'encapsulation GRE utilise un champ de type de protocole dans l'entête GRE afin de prendre en charge l'encapsulation de n'importe quel protocole OSI de couche 3. Les types de protocoles sont définis dans la
+norme RFC 1700 en tant que protocoles « EtherTypes ».
+- Le protocole GRE est lui-même sans état ; par défaut, il n'inclut pas de dispositifs de contrôle de flux.
+- Le protocole GRE n'inclut aucun mécanisme de sécurité fort destiné à protéger ses données utiles.
+- L'en-tête GRE, avec l'en-tête IP de tunneling indiqué sur la figure, crée un minimum de 24 octets de surcharge supplémentaire pour les paquets qui transitent par le tunnel.
+
+#### Configuration tunnel GRE
+- Une nouvelle interface de type tunnel doit être créée.
+- Dans cette interface il faut indiquer les adresses source et destination par lesquelles passe le tunnel.
+- La route du tunnel doit être ajoutée au routage.
+
+![Configuration tunnel GRE]
+
+```
+
+R1(config)# interface Tunnel0
+R1(config-if)# ip address 172.16.0.1 255.255.255.252
+R1(config-if)# tunnel source 1.1.1.1         ! On choisit plutôt l'interface car les IP public changent
+R1(config-if)# tunnel destination 2.2.2.2
+R1(config-if)# tunnel mode gre ip            ! pas nécessaire
+R1(config-if)# exit
+
+R1(config)# ip route 192.168.2.0 255.255.255.0 172.16.0.2
+
+
+R2(config)# interface Tunnel0
+R2(config-if)# ip address 172.16.0.2 255.255.255.252
+R2(config-if)# tunnel source 2.2.2.2          ! On choisit plutôt l'interface car les IP public changent
+R2(config-if)# tunnel destination 1.1.1.1
+R1(config-if)# tunnel mode gre ip            ! pas nécessaire
+R2(config-if)# exit
+
+R2(config)# ip route 192.168.1.0 255.255.255.0 172.16.0.1
+
+! Limiter les effets de l'encapsulation sur la taille des données à transférer (1400) 
+! et la taille maximum du segment (1360)
+R1(config-if)# ip mtu 1400
+R1(config-if)# ip tcp adjust-mss 1360
+
+```
+
+# Tunnel IPSec
+
+#### Chiffrage à différents niveaux.
+![Chiffrage à différents niveaux.]
+
+#### IPsec
+- Le plus connu des protocoles utilisés dans lemonde des VPN.
+  - Indépendant des technologies de chiffrement.
+  - Inclus dans de nombreux OS (Windows, Linux, CISCO…)
+  - Sécurité au niveau de la couche réseau (couche 3)
+
+![Tunnel IPsec]
+
+#### Services disponibles
+- Confidentialité : Algorithmes symétriques, échange de clés,…
+- Intégrité : Signature digitale, HMAC,…
+- Authentification : Pre-shared key, RSA, Certificat digital,…
+- Anti-replay : Sequence number
+
+#### Principe
+- Ipsec est basé sur un ensemble de protocoles :
+  - Des canaux unidirectionnels (Security Association SA)
+  - IPsec est basé sur deux mécanismes :
+   - l'entête AH (Authentification Header)
+   - l'entête ESP (Encapsulated Security Payload)
+   - utilisé séparément ou ensemble
+- Échange de clés manuel ou géré par le protocole IKE (Internet Key Exchange)
+
+
+#### 2 phases
+1. IKE phase 1 : initiation de la communication
+
+![IKE phase 1]
+
+2. IKE phase 2 : échange des informations secrètes
+
+![IKE phase 2]
+
+#### Security Association (SA)
+![Security Association]
+
+On construit 2 canaux unidirectionnels les SA 
+- Connexion unilatérale entre un émetteur et un récepteur 
+- Identifié par un SPI (Index des Paramètres de Sécurité), une adresse IP et un protocole de sécurité.
+- Permet de fixer les protocoles (AH ou ESP), les algorithmes de cryptages, les clés employées et leurs durées de vie.
+
+
+#### En-tête AH (Authentification Header)
+- Ah assure :
+  - l'authentification du correspondant
+  - l'intégrité des données échangées (y compris l'entête IP)
+  - Pas de chiffrement des données.
+- Le récepteur recalcule cette donnée et la compare à celle qui lui est parvenue.
+
+![En-tête-AH]
+
+- ICV (Integrity Check Value)
+  - Valeur générée à partir de tous les champs du paquet IP et d'un clé secrète d'un algorithme symétrique (MAC
+Message Authentification Code). On prend ensuite l'empreinte de ce MAC (HMAC).
+  - Actuellement il faut donc que le système supporte le DES, le MD5 et le SHA.
+- Suivant                Numéro de protocole de l'entête protégée
+- Longueur               Exprimée en nombre de mots de 32 bits
+- SPI                    Valeur identifiant la SA
+- Numéro de séquence     Compteur, valeur pour éviter le rejeu
+
+Mode transport : sécurise de bout en bout les échanges entre deux utilisateurs
+
+![Mode transport]
+
+- insertion transparente entre TCP et IP
+- pas de masquage d’adresse
+- facilité de mise en œuvre
+
+Mode tunnel : sécurise lien par lien les segments de réseau, utilisé quand au moins une des deux extrémités d’IPsec se
+comporte comme une passerelle.
+
+![Mode tunnel]
+
+- insertion après IP
+- encapsulation des datagrammes IP dans un autres datagramme IP
+- masquage d’adresse
+
+#### ESP
+![ESP] 
+
+- Chiffrement des données (confidentialité).
+- Assure leur intégrité et l'authentification de leur expéditeur.
+- Fournit un mécanisme d'anti-rejeu (Anti-replay)
+- Encapsule les informations, contrairement à AH.
+
+- Champ données : Si des données de cryptage (synchronisation, vecteur d'initialisation,…) sont utiles, elles
+peuvent être jointes au début de ce champ.
+- Champ ICV : Il est calculé sur la longueur du paquet ESP en excluant le champ d'authentification. 
+
+Mode transport (utilisé par des machines)
+![Mode transport (utilisé par des machines)]
+
+Mode tunnel (utilisé par des routeurs)
+![Mode tunnel (utilisé par des routeurs)Mode tunnel (utilisé par des routeurs)]
+
+#### IKE Internet Key Exchange
+C'est le protocole utilisé par IPSec pour la gestion des clés (mécanismes de chiffrement asymétrique).
+- IKE est composé de : ISAKMP (gestion des clés), Oakley (échange de clés)
+- Objectif : générer une clé de session en fonction des clés publiques et privées. 
+
+Fonctionnalité :
+- Chiffrement : DES, 3DES, AES.
+- Hash : MD5, SHA
+- Partage de clés Diffie Hellman : Group 1, 2 ou 5
+- Authentification
+  - Clés partagées
+  - Kerberos
+  - Certificats (signature RSA) 
+
+#### Configuration IPsec
+
+Paramètre de la politique isakmp :
+```
+Router(config)#crypto isakmp enable
+Router(config)#crypto isakmp key [Clé secrète] address [IP Destination]
+
+Router(config)#crypto isakmp policy [Numéro]
+Router(config-isakmp)#authentication [choix]
+Router(config-isakmp)#encryption [Chiffrement]
+Router(config-isakmp)#hash [Choix]
+Router(config-isakmp)#group [Choix]
+
+```
+
+Jeu de transformation :
+``` 
+Router(config)#crypto ipsec transform-set VPN-SET [Choix] 
+```
+
+Crypto map :
+```
+Router(config)#crypto map VPN-MAP [Numéro] ipsec-isakmp
+Router(config-crypto-map)#match address [Numéro ACL]
+Router(config-crypto-map)#set peer [IP Destination]
+Router(config-crypto-map)#set pfs group [Choix]
+Router(config-crypto-map)#set transform-set VPN-SET
+```
+
+Application de la cryptomap :
+```
+Router(config)# interface [Choix]
+Router(config-if)#crypto map VPN-MAP
+```
+
+Rappel ACL standard :
+```
+                N°          Action              Condition
+access-list     1 à 99      Permit              host 10.136.8.1 ou 10.136.8.1 0.0.0.0
+                            Deny                10.136.8.0 0.0.0.63 (pas sur les PATS)
+                            Remark              any (pas sur les PATS)
+
+```
+
+Rappel ACL étendu (à utiliser pour IPsec) :
+```
+                N°              Action          Protocole        Condition
+                                                                 Source         Op          Destination     Port
+access-list     100 à 199       Permit          IP               1 hôte         == (eq)     1 hôte          80
+                                Deny            UDP              1 réseau       >           1 réseau        443
+                                Remark          ICMP             Tous           <           Tous
+                                                OSPF                            >=
+                                                EIGRP                           <+
+                                                ESP
+                                                AH
+
+```
+
+
+Vérification des paramètres
+```
+! Vérification de la politique IKE
+Router#show crypto isakmp policy
+
+! Vérification de la politique IPsec
+Router#show crypto ipsec transform-set
+
+! Affichage la crypto map
+R1#show crypto map
+
+! Affichage des SA (Security Association) d’isakmp
+R1#show crypto isakmp sa
+
+! Affichage des SA (Security Association) d’IPsec
+R1#show crypto IPsec sa
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
