Cours Tunnel Gre et IPsec

--- a/645-31_CCNA/645-31_CCNA.md
+++ b/645-31_CCNA/645-31_CCNA.md
@@ -13,8 +13,6 @@
 # Revision EIGRP - OSPF - RIPv2
 #### mardi 22 février 2022
 
-![Diagramme revision] 
-
 #### Router
 - Choisir l'interface à configurer
 - Mettre l'adresse IP correspondante
@@ -81,7 +79,7 @@ redistribute eigrp 65100 metric 1 subnets metric-type 1
 
 #### Configuration possibles
 
-![Configuration possibles]
+![Configuration possibles](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-gre/configurations-possibles.jpg?raw=true)
 
 #### Avantages
 - Etendre la connectivité géographique
@@ -114,7 +112,7 @@ redistribute eigrp 65100 metric 1 subnets metric-type 1
 
 #### Exigences
 
-![exigences]
+![exigences](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-gre/exigences.jpg?raw=true)
 
 - Le tunneling nécessite trois protocoles différents:
   - **Protocole passager** : Les données d'origine (IPX, NetBeui, IP) qui sont transportées.
@@ -124,7 +122,7 @@ redistribute eigrp 65100 metric 1 subnets metric-type 1
 #### Protocole GRE (Generic Routing Encapsulation)
 Protocole destiné à encapsuler un protocole dans un autre.
 
-![protocole GRE]
+![protocole GRE](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-gre/protocole-gre.jpg?raw=true)
 
 - Dans l'en-tête IP externe, la valeur 47 est utilisée dans le champ de protocole afin d'indiquer qu'un en-tête GRE va suivre.
 - L'encapsulation GRE utilise un champ de type de protocole dans l'entête GRE afin de prendre en charge l'encapsulation de n'importe quel protocole OSI de couche 3. Les types de protocoles sont définis dans la
@@ -138,7 +136,8 @@ norme RFC 1700 en tant que protocoles « EtherTypes ».
 - Dans cette interface il faut indiquer les adresses source et destination par lesquelles passe le tunnel.
 - La route du tunnel doit être ajoutée au routage.
 
-![Configuration tunnel GRE]
+![Configuration tunnel GRE](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-gre/configuration-tunnel-gre.jpg?raw=true)
+
 
 ```
 
@@ -171,7 +170,7 @@ R1(config-if)# ip tcp adjust-mss 1360
 # Tunnel IPSec
 
 #### Chiffrage à différents niveaux.
-![Chiffrage à différents niveaux.]
+![Chiffrage à différents niveaux.](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/chiffrage-differents-niveaux.jpg?raw=true)
 
 #### IPsec
 - Le plus connu des protocoles utilisés dans lemonde des VPN.
@@ -179,7 +178,7 @@ R1(config-if)# ip tcp adjust-mss 1360
   - Inclus dans de nombreux OS (Windows, Linux, CISCO…)
   - Sécurité au niveau de la couche réseau (couche 3)
 
-![Tunnel IPsec]
+![Tunnel IPsec](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/tunnel-ipsec.jpg?raw=true)
 
 #### Services disponibles
 - Confidentialité : Algorithmes symétriques, échange de clés,…
@@ -200,14 +199,14 @@ R1(config-if)# ip tcp adjust-mss 1360
 #### 2 phases
 1. IKE phase 1 : initiation de la communication
 
-![IKE phase 1]
+![IKE phase 1](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/IKE-phase1.jpg?raw=true)
 
 2. IKE phase 2 : échange des informations secrètes
 
-![IKE phase 2]
+![IKE phase 2](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/IKE-phase2.jpg?raw=true)
 
 #### Security Association (SA)
-![Security Association]
+![Security Association](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/security-association.jpg?raw=true)
 
 On construit 2 canaux unidirectionnels les SA 
 - Connexion unilatérale entre un émetteur et un récepteur 
@@ -222,7 +221,7 @@ On construit 2 canaux unidirectionnels les SA
   - Pas de chiffrement des données.
 - Le récepteur recalcule cette donnée et la compare à celle qui lui est parvenue.
 
-![En-tête-AH]
+![En-tête AH](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/en-t%C3%AAte-AH.jpg?raw=true)
 
 - ICV (Integrity Check Value)
   - Valeur générée à partir de tous les champs du paquet IP et d'un clé secrète d'un algorithme symétrique (MAC
@@ -235,7 +234,7 @@ Message Authentification Code). On prend ensuite l'empreinte de ce MAC (HMAC).
 
 Mode transport : sécurise de bout en bout les échanges entre deux utilisateurs
 
-![Mode transport]
+![Mode transport](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/mode-transport.jpg?raw=true)
 
 - insertion transparente entre TCP et IP
 - pas de masquage d’adresse
@@ -244,14 +243,14 @@ Mode transport : sécurise de bout en bout les échanges entre deux utilisateurs
 Mode tunnel : sécurise lien par lien les segments de réseau, utilisé quand au moins une des deux extrémités d’IPsec se
 comporte comme une passerelle.
 
-![Mode tunnel]
+![Mode tunnel](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/mode-tunnel.jpg?raw=true)
 
 - insertion après IP
 - encapsulation des datagrammes IP dans un autres datagramme IP
 - masquage d’adresse
 
 #### ESP
-![ESP] 
+![ESP](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/ESP.jpg?raw=true)
 
 - Chiffrement des données (confidentialité).
 - Assure leur intégrité et l'authentification de leur expéditeur.
@@ -263,10 +262,10 @@ peuvent être jointes au début de ce champ.
 - Champ ICV : Il est calculé sur la longueur du paquet ESP en excluant le champ d'authentification. 
 
 Mode transport (utilisé par des machines)
-![Mode transport (utilisé par des machines)]
+![Mode transport (utilisé par des machines)](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/mode-transport-utilise-par-machines.jpg?raw=true)
 
 Mode tunnel (utilisé par des routeurs)
-![Mode tunnel (utilisé par des routeurs)Mode tunnel (utilisé par des routeurs)]
+![Mode tunnel (utilisé par des routeurs)Mode tunnel (utilisé par des routeurs)](https://github.com/RiriJane/8th-sem-heg/blob/master/645-31_CCNA/00_img/tunnel-ipsec/mode-tunnel-utilise-par-routers.jpg?raw=true)
 
 #### IKE Internet Key Exchange
 C'est le protocole utilisé par IPSec pour la gestion des clés (mécanismes de chiffrement asymétrique).
