Notes for Revision POO

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -1,5 +1,19 @@
 # TABLE DES MATIERES
-1. [Révision POO]
+1. [Révision POO](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#revision-programmation-orientee-objets)
+    - [Encapsulation](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation)
+    - [Visibilité de l'information](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#abstraction)
+    - [Abstraction]()
+    - [Encapsulation vs Abstraction vs Visibilité]()
+    - [Héritage]()
+    - [Polymorphisme]()
+    - [Interfaces]()
+    - [Attributs statiques]()
+    - [SOLID]()
+    - [Reader]()
+    - [Exceptions]()
+    - [Hierarchie Classes Java]()
+    - [Comparable]()
+[Checklist] ()
 
 # REVISION PROGRAMMATION ORIENTEE OBJETS
 ## Encapsulation
@@ -16,7 +30,7 @@ Contient toute l'information et n'expose que les données nécessaires.
   m.Facture();
   ```
 
-##Visibilité de l'information
+## Visibilité de l'information
 Private, Public, Protected, package-protected
 - Utilisée pour l'encapsulation, abstraction
 - Avantage : sécurité du programme, éviter les corruptions accidentelles.
