Notes for Revision POO

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -1,10 +1,10 @@
 # TABLE DES MATIERES
 1. [Révision POO](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#revision-programmation-orientee-objets)
     - [Encapsulation](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation)
-    - [Visibilité de l'information](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#abstraction)
-    - [Abstraction]()
-    - [Encapsulation vs Abstraction vs Visibilité]()
-    - [Héritage]()
+    - [Visibilité de l'information](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#visibilit%C3%A9-de-linformation)
+    - [Abstraction](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#abstraction)
+    - [Encapsulation vs Abstraction vs Visibilité](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation-vs-abstraction-vs-visbilit%C3%A9)
+    - [Héritage](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#heritage)
     - [Polymorphisme]()
     - [Interfaces]()
     - [Attributs statiques]()
@@ -13,6 +13,7 @@
     - [Exceptions]()
     - [Hierarchie Classes Java]()
     - [Comparable]()
+
 [Checklist] ()
 
 # REVISION PROGRAMMATION ORIENTEE OBJETS
@@ -90,7 +91,7 @@ public class ChildClass extends MotherClass {
 }
 ```
 
-##POLYMORPHISME
+## POLYMORPHISME
 Fournir des fonctions génériques afin qu'elles puissent être utilisés de manière interchangeable entre différentes classes.
 - En pratique : spécifier des types génériqus pour dépendre au strict minimum.
 - Avantages : flexbilité du code
