Notes for Revision POO

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -5,16 +5,16 @@
     - [Abstraction](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#abstraction)
     - [Encapsulation vs Abstraction vs Visibilité](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation-vs-abstraction-vs-visbilit%C3%A9)
     - [Héritage](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#heritage)
-    - [Polymorphisme]()
-    - [Interfaces]()
-    - [Attributs statiques]()
-    - [SOLID]()
-    - [Reader]()
-    - [Exceptions]()
-    - [Hierarchie Classes Java]()
-    - [Comparable]()
+    - [Polymorphisme](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#polymorphisme)
+    - [Interfaces](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#interfaces)
+    - [Attributs statiques](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#attributs-statiques)
+    - [SOLID](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#solid)
+    - [Reader](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#reader)
+    - [Exceptions](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#exceptions)
+    - [Hierarchie Classes Java](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#hierarchie-classes-java)
+    - [Comparable](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparable)
 
-[Checklist] ()
+[Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
 # REVISION PROGRAMMATION ORIENTEE OBJETS
 ## Encapsulation
@@ -47,7 +47,9 @@ une classe.
 
 ## Encapsulation vs Abstraction vs Visbilité
 Encapsulation : regroupes l’information dans des entités cohérentes.
+
 Abstraction : n’exposer que les fonctions pertinentes, cacher les détails. On montre le "quoi" mais pas le "comment".
+
 Visibilité : = restriction d’accès ; mécanisme pour rendre tout ça plus "propre".
 
 ## HERITAGE
@@ -263,13 +265,13 @@ Interfaces à connaître :
   - Permet de déclencher un tri
 
 # CHECKLIST
-- [] Créer et exécuter un programme simple en Java
-- [] Expliquer la différence entre une classe et un type de base (int, float, …)
-- [] Déclarer une classe
-- [] Instancier des objets et les utiliser
-- [] Définir ce qui doit être exposé (public, private, protected)
-- [] Faire la différence entre une classe abstraite et une interface
-- [] Créer une classe héritant d’une autre classe
-- [] Déclarer qu’une classe implémente une ou plusieurs interfaces
-- [] Utiliser le polymorphisme
-- [] Déclarer et utiliser des attributs et des méthodes statiques
+- [ ] Créer et exécuter un programme simple en Java
+- [ ] Expliquer la différence entre une classe et un type de base (int, float, …)
+- [ ] Déclarer une classe
+- [ ] Instancier des objets et les utiliser
+- [ ] Définir ce qui doit être exposé (public, private, protected)
+- [ ] Faire la différence entre une classe abstraite et une interface
+- [ ] Créer une classe héritant d’une autre classe
+- [ ] Déclarer qu’une classe implémente une ou plusieurs interfaces
+- [ ] Utiliser le polymorphisme
+- [ ] Déclarer et utiliser des attributs et des méthodes statiques
