Added comparable and comparator

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -13,6 +13,7 @@
     - [Exceptions](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#exceptions)
     - [Hierarchie Classes Java](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#hierarchie-classes-java)
     - [Comparable](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparable)
+    - [Comparator]()
 
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
@@ -169,6 +170,7 @@ public class MyClass {  final static int attr1; }
 |
 
 ## READER
+#### CHARACTER BY CHARACTER
 ```
 Reader fileReader = new FileReader("monFichier.txt");
 
@@ -184,6 +186,7 @@ while(monTexte != -1) {
 fileReader.close();
 ```
 
+#### CHARACTER BY CHARACTER - VERSION 2
 ```
 InputStream inputStream = new FileInputStream("monFichier.txt");
 
@@ -200,6 +203,29 @@ while(monTexte != -1){
 }
 
 inputStreamReader.close();
+```
+
+#### BY LINE
+```
+BufferedReader reader = new BufferedReader(new FileReader("results.csv"));
+        String ligne;
+        while((ligne = reader.readLine()) != null){
+            String[] champ = ligne.split(";");
+
+            try {
+                Result res = new Result(champ[0],
+                        Integer.parseInt(champ[1]),
+                        Integer.parseInt(champ[2]),
+                        Integer.parseInt(champ[3]),
+                        Integer.parseInt(champ[4]));
+
+                results.add(res);
+
+            }catch (NumberFormatException | IndexOutOfBoundsException e){
+                System.out.println("Ligne non traitee : " + ligne);
+            }
+
+        }
 ```
 
 ## EXCEPTIONS
@@ -263,6 +289,42 @@ Interfaces à connaître :
   - Renvoie un nombre positif si this > o
   - Transitif (x < y et y < z => x < z)
   - Permet de déclencher un tri
+
+```
+public class MyClass implements Comparable{
+  private int attr1;
+
+  @Override
+  public int compareTo(Object o){
+    return attr1.compareToIgnoreCase(((MyClass)o).attr1);
+  }
+}
+```
+
+## COMPARATOR
+ ```
+ // Replace Type
+ public class MyClass implements Comparator<Type>{
+
+   // method1() is method in MyClass
+   @Override
+    public int compare(MyClass o1, MyClass o2) {
+        return o1.method1(o2);
+    }
+ }
+
+ public class MyClass implements Comparable{
+
+   private int anotherMethod(){ return nb; }
+
+   public int methode1(Object o){
+        return ((MyClass)o).anotherMethod() - anotherMethod();
+    }
+
+ }
+
+ ```
+
 
 # CHECKLIST
 - [ ] Créer et exécuter un programme simple en Java
