--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -13,7 +13,7 @@
     - [Exceptions](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#exceptions)
     - [Hierarchie Classes Java](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#hierarchie-classes-java)
     - [Comparable](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparable)
-    - [Comparator]()
+    - [Comparator](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparator)
 
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
