Cours TAD, Enum, Generique

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -14,6 +14,10 @@
     - [Hierarchie Classes Java](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#hierarchie-classes-java)
     - [Comparable](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparable)
     - [Comparator](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#comparator)
+2. [TAD, Enum, Types Génériques]
+    - [Types abstraits de données]()
+    - [Classes/Types Génériques]()
+    - [Enumerations]()
 
 [Checklist](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#checklist)
 
@@ -324,6 +328,184 @@ public class MyClass implements Comparable{
  }
 
  ```
+
+
+# TYPES ABSTRAITS DE DONNEES
+Une classe abstrait indique qu'une classe n'a pas d'implémentation complète et donc ne peut pas être instancier. Elle définit ce que la classe fait (Notions de contrat).
+
+**CLASSE ABSTRAITE - ANIMAL**
+```
+public abstract class Animal {
+  public abstract void move();
+}
+```
+
+**SOUS-CLASSE CONCRETE - DOG**
+```
+public class Dog extends Animal{
+  private String type;
+
+  public void move(){
+    // Some code to make the dog move...
+  }
+}
+```
+
+**APPLICATION - INSTANCIE LES OBJETS**
+```
+public class App{
+  public static void main(String[] args){
+    // Animal animal = new Animal(); <- PAS POSSIBLE
+    Animal dog = new Dog();
+  }
+}
+```
+
+#### FORMALISME - 3 ELEMENTS
+- Des opérations définies comme des constantes ou des primitives (fonctions mathématiques) (ensemble de départ & d’arrivée) dont découleront les signatures des méthodes.
+      ListeVide : Ø → Liste(T)
+
+      Taille : Liste(T) → ℕ
+
+      Ajouter : T × Liste(T) → Liste(T)
+
+      Retirer : Liste(T) → T × Liste(T)
+
+- Des conditions de validité des opérations : Retirer valide si Taille > 0
+- Des axiomes, i.e. des propriétés (sémantique) qui sont tout le temps vraies ; définissent le
+comportement
+      Taille(ListeVide()) = 0
+
+      Taille(Ajouter(x, L)) > 0
+
+      Retirer(Ajouter(x, L)) = (x, L)
+
+#### POURQUOI UTILISER DES FORMALISME
+- Une Spécification algébrique
+- Permet de convenir d’un ensemble de fonctions avec des non-informaticiens
+- Permet de définir un contrat de vérification de l’implémentation
+- Architecture plus modulaire : on utilise des TAD plutôt que des types concrets dans
+le code pour être indépendants de l’application
+
+# CLASSES/TYPES GENERIQUES
+Les types génériques permettent de définir explicitement les types d'objets que contienne la classe.
+
+- On peut utiliser plusieurs classes paramètres : ```public class MaClasseGenerique <ClasseDeBase, AutreClasse, EncoreUne>```
+- Utiliser les interfaces et héritages ```public class MaClasseGenerique <A, B> extends MaClasse<A> implements MonInterface<A,B>```
+
+**Attention** : Si classe B hérite de A, on ne peut pas définir une fonction qui prenne paramètre classeA et accepte les deux paramètres.
+
+- On peut déclarer dans une classe normale, une méthode génériques :
+```
+public class MaClasse {
+  public static <T> T maMethode(T[] tableaudeT) { ... }
+}
+```
+
+
+#### EXEMPLE AVEC LES ARRAYLISTS
+```
+public class app{
+  public static void main(String[] args){
+    ArrayList notGeneric = new ArrayList();
+    ArrayList<Integer> generics = new ArrayList<Integer>();
+
+    notGeneric.add(1);
+    notGeneric.add("Hello"); // Not what we want but no error thrown since there is no type declared
+
+
+    generics.add(1);
+    generics.add(11);
+    generics.add("Hello"); // Not possible - error thrown
+
+  }
+
+}
+```
+
+#### EXEMPLE EN CREANT NOTRE PROPRE CLASSE DE TYPES GENERIQUES
+**CLASS GENERIQUE - MyList**
+```
+public class MyList<T1>{
+  private ArrayList<T1> list = new ArrayList<T1>();
+
+  public void add(int num)(){ // code to add number in the list }
+}
+```
+
+**APPLICATION - INSTANCIE LES OBJETS**
+```
+public class app{
+  public static void main(String[] args){
+    MyList<String> lst = new MyList<String>();
+
+    lst.add(12);
+    lst.add("Hello") // Not possible, error thrown
+  }
+
+}
+```
+
+# ENUMERATIONS
+Une énumération est une liste de valeurs restreintes.
+- Exemple : {Bleu, Rouge, Jaune, Orange, Vert}
+
+Une énumération est une classe qui dérive de la classe Enum. Quelques méthodes notables :
+- toString() : Renvoie une chaîne de caractères qui correspond à la valeur de l’élément
+- valueOf() : Renvoie la valeur de l’énumération à partir d’une chaîne de caractères
+- values() : Liste les valeurs possibles de l’énumération (tableau)
+- ordinal() : Donne l’index (démarre à 0) d’une valeur dans une énumération
+- compareTo() : comparaison sur la base des numéros d’index
+
+#### DECLARATION
+```
+public enum Couleur {BLEU, ROUGE, JAUNE, ORANGE, VERT}
+```
+#### EXEMPLE DE CODE
+```
+class TestEnum {
+  enum Couleur {BLEU, ROUGE, JAUNE, ORANGE, VERT}
+
+  public static void main(String[] args){
+    System.out.println("Couleur du ciel : " + Couleur.BLEU);
+  }
+}
+```
+
+#### CREATION D'UNE CLASSE ENUM
+```
+public enum Couleur {
+  BLEU("#0084D1"), ROUGE("#C5000B"), JAUNE("#FFD320"), ORANGE("#FF8000"), VERT("#008000")
+  private String codeRGB;
+
+  private Couleur(String rgb) {
+    this.codeRGB = rgb;
+  }
+
+  public String RGB() {
+    return this.codeRGB;
+  }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # CHECKLIST
