Added lecture ext-fonctionnalite

--- a/63-31 Prog 3/63-31_prog3.md
+++ b/63-31 Prog 3/63-31_prog3.md
@@ -1,3 +1,41 @@
+<!-- TOC START min:1 max:99 link:true asterisk:false update:true -->
+- [TABLE DES MATIERES](#table-des-matieres)
+- [REVISION PROGRAMMATION ORIENTEE OBJETS](#revision-programmation-orientee-objets)
+  - [Encapsulation](#encapsulation)
+  - [Visibilité de l'information](#visibilité-de-linformation)
+  - [Abstraction](#abstraction)
+  - [Encapsulation vs Abstraction vs Visbilité](#encapsulation-vs-abstraction-vs-visbilité)
+  - [HERITAGE](#heritage)
+  - [POLYMORPHISME](#polymorphisme)
+  - [INTERFACES](#interfaces)
+  - [ATTRIBUTS STATIQUES](#attributs-statiques)
+  - [SOLID](#solid)
+  - [READER](#reader)
+      - [CHARACTER BY CHARACTER](#character-by-character)
+      - [CHARACTER BY CHARACTER - VERSION 2](#character-by-character---version-2)
+      - [BY LINE](#by-line)
+  - [EXCEPTIONS](#exceptions)
+      - [DEFINIR SA PROPRE EXCEPTION](#definir-sa-propre-exception)
+  - [HIERARCHIE CLASSES JAVA](#hierarchie-classes-java)
+  - [COMPARABLE](#comparable)
+  - [COMPARATOR](#comparator)
+- [TYPES ABSTRAITS DE DONNEES](#types-abstraits-de-donnees)
+      - [FORMALISME - 3 ELEMENTS](#formalisme---3-elements)
+      - [POURQUOI UTILISER DES FORMALISME](#pourquoi-utiliser-des-formalisme)
+- [CLASSES/TYPES GENERIQUES](#classestypes-generiques)
+      - [EXEMPLE AVEC LES ARRAYLISTS](#exemple-avec-les-arraylists)
+      - [EXEMPLE EN CREANT NOTRE PROPRE CLASSE DE TYPES GENERIQUES](#exemple-en-creant-notre-propre-classe-de-types-generiques)
+- [ENUMERATIONS](#enumerations)
+      - [DECLARATION](#declaration)
+      - [EXEMPLE DE CODE](#exemple-de-code)
+      - [CREATION D'UNE CLASSE ENUM](#creation-dune-classe-enum)
+- [EXTENSION DE FONCTIONNALITE](#extension-de-fonctionnalite)
+  - [CLASSE ENVELOPPE - WRAPPER](#classe-enveloppe---wrapper)
+  - [INTERFACE](#interface)
+- [CHECKLIST](#checklist)
+<!-- TOC END -->
+
+
 # TABLE DES MATIERES
 1. [Révision POO](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#revision-programmation-orientee-objets)
     - [Encapsulation](https://github.com/RiriJane/8th-sem-heg/blob/main/63-31%20Prog%203/63-31_prog3.md#encapsulation)
@@ -488,10 +526,28 @@ public enum Couleur {
 }
 ```
 
+# EXTENSION DE FONCTIONNALITE
+- Privilégier la méthode 4 (wrapper) pour ajouter des attributs
+- Privilégier la méthode 5 (interface) pour ajouter des méthodes/comportements
 
+## CLASSE ENVELOPPE - WRAPPER
+![01 - wrapper]
+- une classe abstraite FigureDessinable va mémoriser (dans un attribut) une instance concrète de Figure
+- les méthodes de Figure sont implémentées par délégation
+- on dérive de FigureDessinable les classes RectangleDessinable et CercleDessinable
+- principe du design pattern Adapter
+- voir 02) WrapperDessinable
+- Inconvénients:
+		- on ne pourra wrapper que des Figure existantes (Rectangle et Cercle), pas des Triangle
+		- ça ne fonctionne qu'avec des Figure, pas utilisable pour un autre objet (String)
 
-
-
+## INTERFACE
+![02 - interface]
+- l'interface Dessinable est une classe abstraite, ne définissant que des méthodes abstraites
+- RectangleDessinable sera dérivé de Rectangle, et implements l'interface Dessinable
+- RectangleDessinable conserve ainsi ses caractéristiques provenant de Figure
+- le concept d'interface permet de regrouper des classes du point de vue de leur comportement
+- on pourra utiliser cet interface Dessinable pour n'importe quel objet (pas que des Figure)
 
 
 
